--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-08 23:35-0600\n"
-"PO-Revision-Date: 2021-06-15 13:37+0200\n"
+"PO-Revision-Date: 2021-07-09 13:37+0200\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/gpodder/language/"
 "sk/)\n"
@@ -38,7 +38,7 @@ msgstr "Vyhľadávanie na gpodder.net"
 
 #: src/gpodder/directory.py:107
 msgid "OPML from web"
-msgstr "Súbory OPML z webu"
+msgstr "Súbory OPML z internetu"
 
 #: src/gpodder/directory.py:117
 msgid "OPML file"
@@ -154,7 +154,7 @@ msgstr "Príkaz %(command)s nebol nájdený"
 #: src/gpodder/extensions.py:236
 #, python-format
 msgid "Need at least one of the following commands: %(list_of_commands)s"
-msgstr "Potrebný aspoň jeden z nasledujúcich príkazov: %(list_of_commands)s"
+msgstr "Je potrebný aspoň jeden z nasledujúcich príkazov: %(list_of_commands)s"
 
 #: src/gpodder/extensions.py:273
 #, python-format
@@ -959,7 +959,7 @@ msgid ""
 "start gPodder. Do you want to quit now?"
 msgstr ""
 "Prebieha sťahovanie epizód. Sťahovanie možno obnoviť pri budúcom spustení "
-"gPodderu.Naozaj chcete aplikáciu ukončiť?"
+"gPodderu. Naozaj chcete aplikáciu ukončiť?"
 
 #: src/gpodder/gtkui/main.py:2846 bin/gpo:838
 msgid "Episodes are locked"
@@ -1771,7 +1771,7 @@ msgstr ""
 "Ak zaškrtnete políčko blokovať a ponecháte ho prázdne, zakážete automatické "
 "sťahovanie pre všetky epizódy tohto zdroja. Výrazom zodpovedá neúplný text v "
 "názve epizódy, a prázdnemu výrazu zodpovedá akýkoľvek názov. Výraz výnimky "
-"odblokuje blokované epizódy (na zablokovanie všetkých a násladné "
+"odblokuje blokované epizódy (na zablokovanie všetkých a následné "
 "odblokovanie niektorých)."
 
 #: share/gpodder/extensions/filter.py:166
@@ -1860,11 +1860,11 @@ msgstr "Kopírovať obaly na prehrávač médií Rockbox"
 
 #: share/gpodder/extensions/sonos.py:19 share/gpodder/extensions/sonos.py:81
 msgid "Stream to Sonos"
-msgstr "Prehrať v reproduktoroch Sonos"
+msgstr "Prehrať na reproduktoroch Sonos"
 
 #: share/gpodder/extensions/sonos.py:20
 msgid "Stream podcasts to Sonos speakers"
-msgstr "Prehrať podcasty v reproduktoroch Sonos"
+msgstr "Prehrať podcasty na reproduktoroch Sonos"
 
 #: share/gpodder/extensions/tagging.py:52
 msgid "Tag downloaded files using Mutagen"
@@ -2152,7 +2152,7 @@ msgstr "Skontrolovať pripojenie pred aktualizáciou (ak je to podporované)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:23
 msgid "Updating"
-msgstr "Aktualizuje sa"
+msgstr "Aktualizácia"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:24
 msgid "Delete played episodes:"
@@ -2549,7 +2549,7 @@ msgstr "zakázané"
 #: bin/gpo:1025
 #, python-format
 msgid "Extension %(name)s (%(title)s) %(enabled)s"
-msgstr "Rozšírenie %(name)s (%(title)s) %(enabled)s"
+msgstr "Rozšírenie %(name)s (%(title)s) bolo %(enabled)s"
 
 #: bin/gpo:1105
 #, python-format
