apply @serkan-maker attachment to #1080

--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder 3.10.15\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-10 10:28+0200\n"
-"PO-Revision-Date: 2021-06-29 23:38+0300\n"
+"PO-Revision-Date: 2021-07-01 09:27+0300\n"
 "Last-Translator: Serkan ÖNDER <serkanonder@outlook.com>\n"
 "Language-Team: \n"
 "Language: tr\n"
@@ -426,7 +426,7 @@ msgstr "Hata İzleyici"
 
 #: src/gpodder/gtkui/app.py:277
 msgid "Path to gPodder home is too long"
-msgstr "gPodder ana sayfasına giden yol çok uzun"
+msgstr "gPodder ana klasörüne giden yol çok uzun"
 
 #: src/gpodder/gtkui/config.py:50
 msgid "Integer"
