--- a/po/ru.po
+++ b/po/ru.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: gPodder 2.10+git\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-08 23:35-0600\n"
-"PO-Revision-Date: 2021-02-01 22:56+0700\n"
-"Last-Translator: mrKaban <КонтинентСвободы.рф>\n"
+"PO-Revision-Date: 2021-07-13 21:51+0700\n"
+"Last-Translator: adasiko <adasiko256@yandex.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -94,10 +94,8 @@ msgid "Paused"
 msgstr "Остановлено"
 
 #: src/gpodder/download.py:864
-#, fuzzy
-#| msgid "Select the episodes you want to download:"
 msgid "Episode has no URL to download"
-msgstr "Отметьте эпизоды, которые хотите загрузить:"
+msgstr "Эпизоды не содержат URL для загрузки"
 
 #: src/gpodder/download.py:867
 msgid "Missing content from server"
@@ -322,10 +320,8 @@ msgid "Cannot open device"
 msgstr "Не удалось открыть устройство"
 
 #: src/gpodder/syncui.py:91
-#, fuzzy
-#| msgid "Please check the settings in the preferences dialog."
 msgid "Please check logs and the settings in the preferences dialog."
-msgstr "Пожалуйста, проверьте настройки."
+msgstr "Пожалуйста, проверьте логи и настройки."
 
 #: src/gpodder/syncui.py:138
 msgid "Not enough space left on device"
@@ -539,16 +535,12 @@ msgid "Released"
 msgstr "Выпущен"
 
 #: src/gpodder/gtkui/main.py:871
-#, fuzzy
-#| msgid "Size"
 msgid "Size+"
-msgstr "Размер"
+msgstr "Размер+"
 
 #: src/gpodder/gtkui/main.py:879
-#, fuzzy
-#| msgid "Duration"
 msgid "Duration+"
-msgstr "Продолжительность"
+msgstr "Продолжительность+"
 
 #: src/gpodder/gtkui/main.py:1036 src/gpodder/gtkui/main.py:1185
 #: share/gpodder/ui/gtk/gpodder.ui.h:11
@@ -724,10 +716,8 @@ msgid "Archive"
 msgstr "Архив"
 
 #: src/gpodder/gtkui/main.py:1718
-#, fuzzy
-#| msgid "_Refresh"
 msgid "Refresh image"
-msgstr "Обновить"
+msgstr "Обновить изображение"
 
 #: src/gpodder/gtkui/main.py:1722
 msgid "Delete podcast"
@@ -928,10 +918,8 @@ msgstr[1] "%(count)d ошибки"
 msgstr[2] "%(count)d ошибок"
 
 #: src/gpodder/gtkui/main.py:2713
-#, fuzzy
-#| msgid "Error while updating feed"
 msgid "Error while updating feeds"
-msgstr "Ошибка при обновлении ленты"
+msgstr "Ошибка при обновлении лент"
 
 #: src/gpodder/gtkui/main.py:2739
 msgid "No new episodes"
@@ -1126,7 +1114,6 @@ msgid "Please wait while the podcasts are deleted"
 msgstr "Пожалуйста, дождитесь удаления подкастов"
 
 #: src/gpodder/gtkui/main.py:3297
-#, fuzzy
 msgid ""
 "These podcasts and all their episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
@@ -1381,10 +1368,8 @@ msgid "Password"
 msgstr "Пароль"
 
 #: src/gpodder/gtkui/interface/common.py:192
-#, fuzzy
-#| msgid "Password"
 msgid "Show Password"
-msgstr "Пароль"
+msgstr "Показывать пароль"
 
 #: src/gpodder/gtkui/interface/common.py:229
 #: share/gpodder/ui/gtk/gpodderexporttolocalfolder.ui.h:1
@@ -1738,7 +1723,6 @@ msgid "Resume in"
 msgstr "Продолжить"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:15
-#, fuzzy
 msgid "\"Open website\" episode and podcast context menu"
 msgstr "\"Открыть сайт\" в контекстном меню эпизода"
 
@@ -1754,10 +1738,8 @@ msgid "Open website"
 msgstr "Открыть сайт"
 
 #: share/gpodder/extensions/filter.py:15
-#, fuzzy
-#| msgid "Delete episodes"
 msgid "Filter Episodes"
-msgstr "Удалить эпизоды"
+msgstr "Фильтр эпизодов"
 
 #: share/gpodder/extensions/filter.py:16
 msgid "Disable automatic downloads based on episode title."
@@ -1772,10 +1754,8 @@ msgid "Ignore Case"
 msgstr "Игнорировать регистр"
 
 #: share/gpodder/extensions/filter.py:126
-#, fuzzy
-#| msgid "Filter:"
 msgid "Filter"
-msgstr "Фильтр:"
+msgstr "Фильтр"
 
 #: share/gpodder/extensions/filter.py:143
 msgid "Block"
@@ -1969,14 +1949,10 @@ msgid ""
 msgstr ""
 
 #: share/gpodder/extensions/youtube-dl.py:485
-#, fuzzy
-#| msgid "Download to:"
 msgid "Old Youtube-DL"
-msgstr "Скачать с Youtube-DL"
+msgstr "Старый Youtube-DL"
 
 #: share/gpodder/extensions/youtube-dl.py:490
-#, fuzzy
-#| msgid "Download to:"
 msgid "Download with Youtube-DL"
 msgstr "Скачать с Youtube-DL"
 
@@ -2110,8 +2086,6 @@ msgid "Select None"
 msgstr "Отмена выбора"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:7
-#, fuzzy
-#| msgid "Added"
 msgid "Add"
 msgstr "Добавлено"
 
@@ -2177,7 +2151,7 @@ msgstr "Когда найдены новые эпизоды:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:22
 msgid "Check connection before updating (if supported)"
-msgstr ""
+msgstr "Проверять соединение перед обновлением (если поддерживается)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:23
 msgid "Updating"
@@ -2544,14 +2518,10 @@ msgid "Title:"
 msgstr "Заголовок:"
 
 #: bin/gpo:992
-#, fuzzy
-#| msgid "Strategy:"
 msgid "Category:"
 msgstr "Категория:"
 
 #: bin/gpo:993
-#, fuzzy
-#| msgid "Section:"
 msgid "Description:"
 msgstr "Описание:"
 
@@ -2606,10 +2576,8 @@ msgid "print logging output on the console"
 msgstr "вывод на экран записи журнала"
 
 #: bin/gpodder:104
-#, fuzzy
-#| msgid "print logging output on the console"
 msgid "reduce warnings on the console"
-msgstr "вывод на экран записи журнала"
+msgstr "сократить вывод предупреждений в консоль"
 
 #: bin/gpodder:107
 msgid "subscribe to the feed at URL"
