translation update for turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Serkan ÖNDER <serkanonder@outlook.com>, 2021.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gPodder 3.10.15\n"
+"Project-Id-Version: gPodder 3.10.21\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-19 22:46-0600\n"
-"PO-Revision-Date: 2021-03-12 18:39+0300\n"
+"PO-Revision-Date: 2021-08-12 23:49+0300\n"
 "Last-Translator: Serkan ÖNDER <serkanonder@outlook.com>\n"
 "Language-Team: \n"
 "Language: tr\n"
@@ -1417,7 +1417,7 @@ msgstr "Buraya yalnızca yerel dosyaları ve http:// URL'leri bırakabilirsiniz.
 #: src/gpodder/gtkui/desktop/channel.py:223
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:5
 msgid "Save"
-msgstr ""
+msgstr "Kaydet"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:104
 msgid "Remove"
@@ -1747,6 +1747,8 @@ msgid ""
 "the values they had before. The changes are saved immediately after they are "
 "made."
 msgstr ""
+"<b>Not:</b> İptal düğmesi, filtre ayarlarını daha önce sahip oldukları "
+"değerlere <b>döndürmez</b>. Değişiklikler yapıldıktan hemen sonra kaydedilir."
 
 #: share/gpodder/extensions/filter.py:150
 msgid "Block"
@@ -1770,18 +1772,12 @@ msgstr ""
 "bazılarının engelini kaldırmak için)."
 
 #: share/gpodder/extensions/filter.py:175
-#, fuzzy
-#| msgid "Filter Episodes"
 msgid "Filter episodes now"
-msgstr "Bölümleri Filtrele"
+msgstr "Bölümleri şimdi filtrele"
 
 #: share/gpodder/extensions/filter.py:179
-#, fuzzy
-#| msgid "Filter episodes now (undoes any episodes you marked as old)"
 msgid "Undoes any episodes you marked as old."
-msgstr ""
-"Bölümleri şimdi filtrele (eski olarak işaretlediğiniz tüm bölümleri geri "
-"alır)"
+msgstr "Eski olarak işaretlediğiniz bölümleri geri alır."
 
 #: share/gpodder/extensions/gtk_statusicon.py:19
 msgid "Gtk Status Icon"
@@ -1996,45 +1992,39 @@ msgstr "Yeni bir podcast ekle"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:1
 msgid "Channel Editor"
-msgstr ""
+msgstr "Kanal Düzenleyici"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:3
 msgid "OK"
-msgstr ""
+msgstr "TAMAM"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:4
 msgid "page0"
-msgstr ""
+msgstr "sayfa0"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:6
 msgid "page1"
-msgstr ""
+msgstr "sayfa1"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:7
 msgid "<b>Feed URL</b>"
-msgstr ""
+msgstr "<b>Besleme URL'si</b>"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:8
-#, fuzzy
-#| msgid "<b>Locations</b>"
 msgid "<b>Download location</b>"
-msgstr "<b>Konumlar</b>"
+msgstr "<b>İndirme konumu</b>"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:9
 msgid "Info"
-msgstr ""
+msgstr "Bilgi"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:10
-#, fuzzy
-#| msgid "No subscriptions"
 msgid "Pause subscription"
-msgstr "Abonelik yok"
+msgstr "Aboneliği duraklat"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:11
-#, fuzzy
-#| msgid "Synchronize to MP3 player devices"
 msgid "Sync to player devices"
-msgstr "MP3 oynatıcı cihazlarıyla senkronize edin"
+msgstr "Oynatıcı cihazlarıyla senkronize et"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:12
 msgid "Section:"
@@ -2059,8 +2049,6 @@ msgid "Password:"
 msgstr "Şifre:"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:17
-#, fuzzy
-#| msgid "Setting"
 msgid "Settings"
 msgstr "Ayarlar"
 
