Update Slovak translation

--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-19 22:46-0600\n"
-"PO-Revision-Date: 2021-07-09 13:37+0200\n"
+"PO-Revision-Date: 2021-08-20 13:37+0200\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/gpodder/language/"
 "sk/)\n"
@@ -1428,7 +1428,7 @@ msgstr "Sem môžete umiestniť iba lokálne súbory a http:// adresy."
 #: src/gpodder/gtkui/desktop/channel.py:223
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:5
 msgid "Save"
-msgstr ""
+msgstr "Uložiť"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:104
 msgid "Remove"
@@ -1767,6 +1767,8 @@ msgid ""
 "the values they had before. The changes are saved immediately after they are "
 "made."
 msgstr ""
+"<b>Poznámka:</b> Tlačidlo Zrušiť <b>nevráti</b> nastavenia filtra na "
+"predchádzajúce hodnoty. Zmeny budú uložené ihneď po ich vykonaní."
 
 #: share/gpodder/extensions/filter.py:150
 msgid "Block"
@@ -1790,16 +1792,12 @@ msgstr ""
 "odblokovanie niektorých)."
 
 #: share/gpodder/extensions/filter.py:175
-#, fuzzy
-#| msgid "Filter Episodes"
 msgid "Filter episodes now"
 msgstr "Filtrovať epizódy"
 
 #: share/gpodder/extensions/filter.py:179
-#, fuzzy
-#| msgid "Filter episodes now (undoes any episodes you marked as old)"
 msgid "Undoes any episodes you marked as old."
-msgstr "Filtrovať epizódy (vráti späť označenie epizód ako staré)"
+msgstr "Vráti späť označenie epizód ako staré."
 
 #: share/gpodder/extensions/gtk_statusicon.py:19
 msgid "Gtk Status Icon"
@@ -2012,7 +2010,7 @@ msgstr "Pridať nový podcast"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:1
 msgid "Channel Editor"
-msgstr ""
+msgstr "Editor zdrojov"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:3
 msgid "OK"
@@ -2020,37 +2018,31 @@ msgstr ""
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:4
 msgid "page0"
-msgstr ""
+msgstr "strana0"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:6
 msgid "page1"
-msgstr ""
+msgstr "strana1"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:7
 msgid "<b>Feed URL</b>"
-msgstr ""
+msgstr "<b>URL zdroja</b>"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:8
-#, fuzzy
-#| msgid "<b>Locations</b>"
 msgid "<b>Download location</b>"
-msgstr "<b>Umiestnenia</b>"
+msgstr "<b>Umiestnenie sťahovania</b>"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:9
 msgid "Info"
-msgstr ""
+msgstr "Informácie"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:10
-#, fuzzy
-#| msgid "No subscriptions"
 msgid "Pause subscription"
-msgstr "Žiadne odbery"
+msgstr "Pozastaviť odber"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:11
-#, fuzzy
-#| msgid "Synchronize to MP3 player devices"
 msgid "Sync to player devices"
-msgstr "Synchronizovať s MP3 prehrávačmi"
+msgstr "Synchronizovať s prehrávačmi"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:12
 msgid "Section:"
@@ -2075,10 +2067,8 @@ msgid "Password:"
 msgstr "Heslo:"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:17
-#, fuzzy
-#| msgid "Setting"
 msgid "Settings"
-msgstr "Nastavenie"
+msgstr "Nastavenia"
 
 #: share/gpodder/ui/gtk/gpodderconfigeditor.ui.h:1
 msgid "gPodder Configuration Editor"
