THX for the input

--- a/po/de.po
+++ b/po/de.po
@@ -1967,7 +1967,7 @@ msgstr ""
 
 #: share/gpodder/extensions/youtube-dl.py:485
 msgid "Old Youtube-DL"
-msgstr "Alter Youtube Downloadlink"
+msgstr "Alte Youtube-DL Version"
 
 #: share/gpodder/extensions/youtube-dl.py:490
 msgid "Download with Youtube-DL"
